# PARseL

./: README.md
parsel-poc/: CMakeLists.txt  README.md
parsel-poc/config-related-files/: common.py  settings.cmake
parsel-poc/src/: attestation.c  initial_process.c  main.c  process1.c  process2.c  process3.c
parsel-poc/src/hacl-c/: Hacl_Ed25519.h
parsel-proofs/: README.md
parsel-proofs/lowToC/: Makefile
parsel-proofs/lowToC/code/: PARseL.fst
